--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root{
     --background-logo: #01CBE1;
+    --text-color: #003755;
 }
 
 *{
@@ -17,6 +18,7 @@ body{
 .header{
     display: flex;
     justify-content: space-between;
+    font-size: 1.3rem;
 }
 
 .logo-header{
@@ -33,6 +35,7 @@ body{
 .nav{
     display: flex;
     align-items: center;
+    margin-right: 1rem;
 }
 
 .navegacao{
@@ -47,7 +50,12 @@ body{
 }
 
 .navegacao a{
+    color: var(--text-color);
     text-decoration: none;
+}
+
+.navegacao a:hover{
+    border-bottom: 2px solid var(--text-color);
 }
 
 #btn-toggle-navigation{
