--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,42 @@ button.prev, button.next {
     font-size: 2vw;
 }
 
+.bg-dark-blue{
+    background-color: var(--text-color);
+}
+
+.card{
+    width: 100%;
+    height: 100vh;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.card .article{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+}
+
+.card .article img{
+    width: 30vw;
+}
+
+.card .article .text{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card .article .text p{
+    font-size: 1.3rem;
+}
+
 @media (max-width: 576px) {
     .header{
         background-color: var(--text-color);
