--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,10 @@ button.prev, button.next {
     font-size: 2vw;
 }
 
+.text-dark-blue{
+    color: var(--text-color);
+}
+
 .bg-dark-blue{
     background-color: var(--text-color);
 }
@@ -189,7 +193,8 @@ button.prev, button.next {
 }
 
 .card .article img{
-    width: 30vw;
+    width: 70vw;
+    border-radius: 30px;
 }
 
 .card .article .text{
@@ -200,7 +205,70 @@ button.prev, button.next {
 }
 
 .card .article .text p{
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 0;
+}
+
+.card .article .text h2{
+    font-size: 2.5rem;
+    margin: 0;
+    padding: 0;
+}
+
+.main{
+    width: 100%;
+    height: 100vh;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.main .article{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+}
+
+.main .article img{
+    width: 70vw;
+    border-radius: 30px;
+}
+
+.main .article .text{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.main .article .text p{
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 0;
+}
+
+.main .article .text h2{
+    font-size: 2.5rem;
+    margin: 0;
+    padding: 0;
+}
+
+.button{
+    color: #FFFFFF;
+    color: var(--text-color);
+    font-weight: bolder;
+    margin-top: 1rem;
+    padding: 0.8rem;
+    font-size: 1rem;
+    transition: all 0.2s ease-out;
+}
+
+.button:hover{
+    padding: 1rem;
 }
 
 @media (max-width: 576px) {
